syntax = "proto3";

package pb;

option go_package="/mongodbtest";
import "google/protobuf/empty.proto";


service UserManager{
    rpc Create(CreateRequest) returns (UserResponse);
    rpc Read (ReadRequest) returns (UserResponse);
    rpc Update (UpdateRequest) returns (UserResponse);
    rpc Delete (ReadRequest) returns (google.protobuf.Empty);
    rpc ReadAll (google.protobuf.Empty) returns (ReadAllResponse);
}

message CreateRequest{
    string name=1;
    string email=2;
    string password=3;
}

message ReadRequest{
    string id=1;
}
message UpdateRequest{
    string id=1;
    string name=2;
    string email=3;
    string password=4;
}

message UserResponse{
    string id=1;
    string name=2;
    string email=3;
    string password=4;
}

message ReadAllResponse{
    repeated UserResponse users=1;
}



